--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
 		that makeup this application -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>com.endava.andonescu.demos.springfreemarker.config</param-value>
+		<param-value>ro.andonescu.demos.springfreemarker.config</param-value>
 	</context-param>
 	<context-param>
 		<param-name>spring.profiles.active</param-name>
